[gd_scene load_steps=9 format=3 uid="uid://slj68gle8hof"]

[ext_resource type="Texture2D" uid="uid://dvwpljcqosykw" path="res://assets/player/parrot.png" id="1_vqphk"]
[ext_resource type="Script" uid="uid://3hpgommlitgy" path="res://Scenes/Animal/Animal.gd" id="1_x85cc"]
[ext_resource type="Texture2D" uid="uid://c07so5lhdhlkq" path="res://assets/items/arrow.png" id="2_g1stt"]
[ext_resource type="AudioStream" uid="uid://28or5m31c8n4" path="res://assets/audio/kick_wood.ogg" id="4_5swx0"]
[ext_resource type="AudioStream" uid="uid://dqklykwm2tr77" path="res://assets/audio/stretch2.ogg" id="5_fsxl2"]
[ext_resource type="AudioStream" uid="uid://6nxk44oufgt8" path="res://assets/audio/catapult.ogg" id="6_dl82p"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pf3qi"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_lib84"]
radius = 19.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_pf3qi")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_x85cc")

[node name="Parrot" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_vqphk")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_g1stt")
offset = Vector2(150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lib84")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -42.0
offset_top = -119.0
offset_right = 382.0
offset_bottom = 13.0
scale = Vector2(0.218693, 0.228919)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 96
text = "sdfsdfsdf"

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5swx0")

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fsxl2")

[node name="Launch Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dl82p")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
